--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pelican-themes"]
 	path = pelican-themes
-	url = https://github.com/getpelican/pelican-themes.git
+	url = git@github.com:LutzCle/pelican-themes.git
