--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Page settings
 
-baseURL = "http://example.org/"
+baseURL = "https://venturadelmonte.github.io"
 languageCode = "en"
 title = "Bonaventura Del Monte, Ph.D."
 #theme = "hugo-devresume-theme"
