--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ title = "Bonaventura Del Monte, Ph.D."
         title = "Ph.D."
         name = "Bonaventura"
         surname = "Del Monte"
-        tagline = "Senior Software Engineer"
+        tagline = ""
         avatar = "mypic.jpg"
 
 
