--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ title = "Bonaventura Del Monte, Ph.D."
         name = "Bonaventura"
         surname = "Del Monte"
         tagline = ""
-        avatar = "mypic.jpg"
+        avatar = "mypic.png"
 
 
 
