--- a/config.toml
+++ b/config.toml
@@ -159,7 +159,7 @@ title = "Bonaventura Del Monte, Ph.D."
 
     [params.summary]
         enable = true
-        text = """Currently, I am a Senior Software Engineer at [Observe Inc.](https://www.observeinc.com/). I was previously a Senior Researcher at
+        text = """Currently, I am a Senior Software Engineer at [Observe Inc.](https://www.observeinc.com/), where I am helping build the Observability Cloud. I was previously a Senior Researcher at
 [Technical University Berlin](https://www.dima.tu-berlin.de/menue/database_systems_and_information_management_group/?no_cache=1)
 collaborating with
 [Volker Markl](https://www.dima.tu-berlin.de/menue/mitarbeiter/volker_markl),
@@ -212,7 +212,7 @@ I developed my Master's thesis while participating to an Erasmus+ program.
             authors = "Bonaventura Del Monte, Steffen Zeuch, Tilmann Rabl, Volker Markl."
             venue = "SIGMOD'22"
             link = "https://dl.acm.org/doi/abs/10.1145/3514221.3517826"
-            slides = "assets/pdfs/SlashSigmod2022.pdf"
+            slides = "assets/pdfs/Slash_Sigmod_2022.pdf"
             fullvenue = "2022 ACM SIGMOD International Conference on Management of Data, Philadelphia, USA, 2022."
         [[params.publications.list]]
             title = "NebulaStream: Complex Analytics Beyond the Cloud"
