--- a/config.toml
+++ b/config.toml
@@ -159,7 +159,7 @@ title = "Bonaventura Del Monte, Ph.D."
 
     [params.summary]
         enable = true
-        text = """Currently, I am a Senior Software Engineer at [Observe Inc.](https://www.observeinc.com/), where I am helping build the Observability Cloud. I was previously a Senior Researcher at
+        text = """Currently, I am a Staff Software Engineer at [Observe Inc.](https://www.observeinc.com/), where I am helping build the Observability Cloud. I was previously a Senior Researcher at
 [Technical University Berlin](https://www.dima.tu-berlin.de/menue/database_systems_and_information_management_group/?no_cache=1)
 collaborating with
 [Volker Markl](https://www.dima.tu-berlin.de/menue/mitarbeiter/volker_markl),
